# Tests-at-bitdoglab

./: LICENSE  README.md
TCP_IP_led_control/: CMakeLists.txt
display_oled/: CMakeLists.txt  display_oled.c
http_led_control/: http_led_control.c
measure_temperature_show_display/: CMakeLists.txt  measure_temperature_show_display.c
send_data_to_firebase/: server.py
server/: server.py
server_wifi/: CMakeLists.txt  server_wifi.c
temperature_teste/: CMakeLists.txt  temperature_teste.c
